--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -51,9 +51,13 @@ jobs:
 
       - name: Upstreaming dashboard
         if: github.ref == 'refs/heads/master'
-        run: |
-          mkdir -p website/_includes
-          python3 scripts/upstreaming_dashboard.py
+        uses: leanprover-community/upstreaming-dashboard-action@main
+        with:
+          website-directory: "website"
+          project-name: "ForbiddenMatrix"
+          include-drafts: true
+          relevant-labels: ["forbidden-matrix"]
+          branch-name: "master"
 
       - name: File dependencies
         if: github.ref == 'refs/heads/master'
